my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENVAL_param_site/T_ENVAL_param_site-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENVAL_PARAM_SITE_STRUCT_H
#define T_ENVAL_PARAM_SITE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENVAL_param_site(void);


#endif /* not T_ENVAL_PARAM_SITE_STRUCT_H */
